RESOLVED FIXED157818
AX: Adding children incorrectly when there are nested inline continuations
https://bugs.webkit.org/show_bug.cgi?id=157818
Summary AX: Adding children incorrectly when there are nested inline continuations
Nan Wang
Reported 2016-05-17 16:08:43 PDT
When we have nested inline continuations, we are adding some children repeatedly. <rdar://problem/25971444>
Attachments
Initial patch (5.07 KB, patch)
2016-05-17 16:33 PDT, Nan Wang
no flags
Nan Wang
Comment 1 2016-05-17 16:33:00 PDT
Created attachment 279181 [details] Initial patch
chris fleizach
Comment 2 2016-05-17 18:12:12 PDT
Comment on attachment 279181 [details] Initial patch Great!
WebKit Commit Bot
Comment 3 2016-05-17 19:13:58 PDT
Comment on attachment 279181 [details] Initial patch Clearing flags on attachment: 279181 Committed r201067: <http://trac.webkit.org/changeset/201067>
WebKit Commit Bot
Comment 4 2016-05-17 19:14:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.