AX: Adding children incorrectly when there are nested inline continuations https://bugs.webkit.org/show_bug.cgi?id=157818

Reviewed by Chris Fleizach.

Source/WebCore:

When getting the inline element continuation's next sibling, if we fall back on to the parent
case, we might end up adding the same node repeatedly. Fixed it by skipping this case.

Test: accessibility/mac/nested-inline-elements-children.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::nextSibling):

LayoutTests:

* accessibility/mac/nested-inline-elements-children-expected.txt: Added.
* accessibility/mac/nested-inline-elements-children.html: Added.


Canonical link: https://commits.webkit.org/175948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201067 268f45cc-cd09-0410-ab3c-d52691b4dbfc